some improvements to digital play mode: -use AUMODE_PLAY_ALL, from Sergey Svishchev -- this might cause  stuttering if the write to audio can't keep up, but it avoids pauses  if the audio buffer drains out on stop/resume -The timeout for the raw SCSI command to read audio data  was too small, causing complete failure for me. -Since the itimer can't do faster than HZ, a too small buffer doesn't  work. Try to calculate a sensible buffer size. -While it makes sense to deliver data a bit faster than necessary,  it should be not that much that the blocking in the signal handler  hurts interactive response. Allow for 50ms. -Comment out a sched_yield() in the signal handler - this doesn't  look right. This is far from being perfect, but it makes digital mode usable for me. And for Jeremy C. Reed, the author of PR bin/38493.